PTX-9242 PTX-9243 JDK 17 dependencies