@@ -34,6 +34,11 @@
     several front-ends for Ant, Maven and BND.
   </description>
 
+  <properties>
+    <java.version>17</java.version>
+    <asm.version>9.4</asm.version>
+  </properties>
+
   <modules>
     <module>manipulator-bom</module>
     <module>annotations</module>
@@ -54,6 +59,14 @@
   <build>
     <plugins>
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+        </configuration>
+      </plugin>
+      <plugin>
         <artifactId>maven-release-plugin</artifactId>
         <version>2.5.1</version>
         <configuration>
@@ -63,7 +76,42 @@
           <arguments>-Papache-release</arguments>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+        </configuration>
+      </plugin>
     </plugins>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.rat</groupId>
+          <artifactId>apache-rat-plugin</artifactId>
+          <executions>
+            <execution>
+              <phase>verify</phase>
+              <goals>
+                <goal>check</goal>
+              </goals>
+            </execution>
+          </executions>
+          <configuration>
+            <!-- check src only (except remote resources additions) -->
+            <includes>
+              <include>src/**</include>
+            </includes>
+            <excludes>
+              <exclude>src/main/appended-resources/**</exclude>
+              <exclude>**/*.MF</exclude>
+            </excludes>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
+
 
 </project>
